--- a/client/index.html
+++ b/client/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <title>Квиз, плиз! Рейтинг команд</title>
   <meta charset="UTF-8">
-  <title>Quiz Please team rating</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Квиз, плиз! – интеллектуальная битва в приятной атмосфере">
+  <link rel="image_src" href="./images/big_logo.png" />
+  <link rel="shortcut icon" href="images/icon.png">
+
   <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
@@ -33,7 +38,7 @@
     </div>
   </div>
 
-  <script src="calculate.js"></script>
+  <script src="data.js"></script>
   <script src="app.js"></script>
   <script src="generateContent.js"></script>
 
