progress adding React

--- a/static/index.html
+++ b/static/index.html
@@ -24,6 +24,7 @@
             <ul>
               <li>Положение команд в рейтинговой таблице определяется средним значением процента попаданий в первое место за каждый раунд</li>
               <li>Положение команд с кол-вом сыгранных раундов меньше 5 считается отдельно и отделяется горизонтальной чертой</li>
+              <li>Если вы нашли ошибку или у вас есть пожелания, пожалуйста, пишите на <a href="mailto:grammka@gmail.com">grammka@gmail.com</a></li>
             </ul>
           </div>
         </div>
