added new webpack compiling script, server express

--- a/client/assets/index.html
+++ b/client/assets/index.html
@@ -1,11 +1,14 @@
 <!doctype html>
 <html>
   <head>
-    <title>Sample App</title>
+	  <title>Quiz, please, rate this!</title>
+	  <meta charset="UTF-8">
+	  <meta name="viewport" content="width=device-width, initial-scale=1">
+	  <meta name="description" content="Квиз, плиз! – интеллектуальная битва в приятной атмосфере">
+	  <link rel="image_src" href="/static/images/big_logo.png" />
+	  <link rel="shortcut icon" href="/static/images/icon.png">
   </head>
   <body>
-    <div id='root'>
-    </div>
-    <script src="/static/bundle.js"></script>
+    <div id="root"></div>
   </body>
 </html>
