--- a/client/assets/index.html
+++ b/client/assets/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html>
   <head>
-	  <title>Quiz, please, rate this!</title>
+	  <title>{{ htmlWebpackPlugin.files.chunks.app }}</title>
 	  <meta charset="UTF-8">
 	  <meta name="viewport" content="width=device-width, initial-scale=1">
 	  <meta name="description" content="Квиз, плиз! – интеллектуальная битва в приятной атмосфере">
-	  <link rel="image_src" href="/static/images/big_logo.png" />
-	  <link rel="shortcut icon" href="/static/images/icon.png">
+	  <link rel="image_src" href="{{ htmlWebpackPlugin.files.chunks.app.logo }}" />
+	  <link rel="shortcut icon" href="{{ htmlWebpackPlugin.files.icon }}" />
   </head>
   <body>
     <div id="root"></div>
